--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <link rel="stylesheet" href="the_rock.html">
+    <a href="the_rock.html">the rock testee</a>
+    <h1>testee</h1>
 </body>
 </html>
