--- a/the_rock.html
+++ b/the_rock.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>qr code efras</title>
-    <link rel="stylesheet" href="the rock.css">
+    <link rel="stylesheet" href="the_rock.css">
 </head>
 <body>
     <div class="box">
