--- a/the_rock.html
+++ b/the_rock.html
@@ -9,7 +9,7 @@
 <body>
     <div class="box">
         <h1>Você achou o easter egg!</h1>
-        <img src="./therock.jpg" alt="">
+        <img src="img/therock.jpg" alt="">
     </div>
 </body>
 </html>
