--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>qr code page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="the_rock.html">the rock testee</a>
-    <h1>testee</h1>
+    <div class="container">
+    <img src="img/frame.png" alt="">
+    <h1>Olá! QR Code curioso, não?</h1>
+    <h3>Escaneia e ache o segredo!</h3>
+    </div>
 </body>
 </html>
