qr code linkado com o easter egg

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-    <img src="img/frame.png" alt="">
+    <a href="the_rock.html"><img src="img/frame.png" alt=""></a>
     <h1>Olá! QR Code curioso, não?</h1>
     <h3>Escaneia e ache o segredo!</h3>
     </div>
